<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_inscribir"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Crear_equipo">

    <ScrollView
        android:id="@+id/sclv_inscribir"
        android:layout_width="397dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="7dp"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="7dp"
        android:layout_marginRight="7dp"
        android:layout_marginBottom="33dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="83dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_Jugador"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtv_jugador"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/et_nombre"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/et_documento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/et_documento"
                android:inputType="number" />

            <EditText
                android:id="@+id/et_celular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/et_celular"
                android:inputType="phone" />

            <EditText
                android:id="@+id/et_edad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/et_edad"
                android:inputType="number" />

            <EditText
                android:id="@+id/et_posicion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/et_posicion"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/et_equipo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/et_equipo"
                android:inputType="textPersonName" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="91dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/foto_jugador"
                    android:layout_width="137dp"
                    android:layout_height="69dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/app_name"
                    app:srcCompat="@drawable/previo" />

                <ImageButton
                    android:id="@+id/imageB"
                    android:layout_width="182dp"
                    android:layout_height="69dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/app_name"
                    app:srcCompat="@drawable/camara" />
            </LinearLayout>



            <TextView
                android:id="@+id/txtv_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtv_inf"
                android:textSize="14sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/txt_detalle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_detalle" />

            <Button
                android:id="@+id/btn_inscribir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFC107"
                android:text="@string/btn_inscribir"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                tools:layout_editor_absoluteY="474dp" />

        </LinearLayout>

    </ScrollView>


</RelativeLayout>